--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#faq</h1>
-<p>Find me in app/views/static_pages/faq.html.erb</p>
+<% provide(:title, 'FAQ') %>
+<h1>Post Your Paint FAQ</h1>
+<p>This is the FAQ page for the Post Your paint app that I'm building.</p>
