--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "sample app", root_path, id: "logo" %>
+      <%= link_to "Post Your Paint", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "About",      about_path %></li>
