--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,13 @@
             <h1><%= @user.email %></h1>
         </section>
     </aside>
+    <div class="span8">
+        <% if @user.paints.any? %>
+            <h3>Paints (<%= @user.paints.count %>)</h3>
+            <ol class="paints">
+                <%= render @paints %>
+            </ol>
+            <%= will_paginate @paints %>
+        <% end %>
+    </div>
 </div>
