--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -185,3 +185,27 @@ input, textarea, select, .uneditable-input {
     }
   }
 }
+
+
+/* Paints */
+.paints {
+  list-style: none;
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+.content {
+  display: block;
+}
+.timestamp {
+  color: $grayLight;
+}
+
+#add_paint_form {
+    textarea {
+        height: 100px;
+    }
+}
