--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,17 @@
     <aside class="span4">
         <section>
             <h1><%= @user.email %></h1>
+            <span>
+                <%= pluralize(current_user.paints.count, "paint") %>
+            </span>
+            <%= link_to "Add Paint", paint_new_path, 
+                                     class: "btn btn-large btn-primary" %>
         </section>
     </aside>
+    <% if signed_in? %>
+        <div class="span8">
+            <h3>Inventory</h3>
+            <%= render 'shared/inventory' %>
+        </div>
+    <% end %>
 </div>
