putting these away for now

--- a/app/views/shared/_inventory.html.erb
+++ b/app/views/shared/_inventory.html.erb
@@ -4,6 +4,6 @@
     </ol>
     <%= will_paginate @inventory_items %>
 <% else %>
-    You don't have anything paint, <%= link_to "add some", paint_new_path %> now!
+    You don't have any paint, <%= link_to "add some", paint_new_path %> now!
 <% end %>
  
