--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,30 @@
-<% provide(:title, @user.email) %>
-<div class="row">
-    <aside class="span4">
-        <section>
-            <h1><%= @user.email %></h1>
-        </section>
-    </aside>
-    <div class="span8">
-        <% if @user.paints.any? %>
-            <h3>Paints (<%= @user.paints.count %>)</h3>
-            <ol class="paints">
-                <%= render @paints %>
-            </ol>
-            <%= will_paginate @paints %>
-        <% end %>
+<% if signed_in? %>
+    <div class="row">
+        <aside class="span4">
+            <section>
+                <%= render 'user_info' %>
+            </section>
+            <section>
+                <%= render 'shared/paint_form' %>
+            </section>
+        </aside>
+        <div class="span8">
+            <h3>Inventory</h3>
+            <%= render 'shared/inventory' %>
+        </div>
     </div>
-</div>
+<% else %>
+    <div class="center hero-unit">
+      <h1>Welcome to the Paint App</h1>
+    
+      <h2>
+        This is the home page for the
+        <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+        sample application.
+      </h2>
+    
+      <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+    </div>
+    
+    <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<% end %>
