--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
-<header class="navbar navbar-fixed-top">
+<div class="container">
+<header>
   <div class="navbar-inner">
     <div class="container">
       <%= link_to "Post Your Paint", root_path, id: "logo" %>
