--- a/app/views/shared/_paint_form.html.erb
+++ b/app/views/shared/_paint_form.html.erb
@@ -2,17 +2,8 @@
     <%= render 'shared/error_messages', object: f.object %>
     <div class="field">
         <%= f.label :color_family %>
-        <%= select_tag(:color_family, options_for_select([['Red', 1],
-                                                            ['Orange', 2], 
-                                                            ['Yellow', 3], 
-                                                            ['Green', 4], 
-                                                            ['Blue', 5], 
-                                                            ['Purple', 6], 
-                                                            ['Black', 7], 
-                                                            ['Grey', 8], 
-                                                            ['White', 9], 
-                                                            ['Cream', 10],
-                                                            ['Brown', 12]])) %>
+        <%= f.collection_select(:family_id, @color_families, :id, :name, :include_blank => "Please select") %>
+
     </div>
      <div class="field">
         <%= f.label :name %>
