--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
     <%= render 'layouts/shim' %>    
 </head>
   <body>
-    <%= render 'layouts/header' %>
     <div class="container">
+    <%= render 'layouts/sidebar' %>
+    <%= render 'layouts/header2' %>
       <% flash.each do |key, value| %>
         <%= content_tag(:div, value, class: "alert alert-#{key}") %>
       <% end %>
