--- a/app/views/shared/_inventory_item.html.erb
+++ b/app/views/shared/_inventory_item.html.erb
@@ -1,17 +1,24 @@
-<li id="<% inventory_item.id %>">
-    <span class="content"><%= inventory_item.color_family %></span>
-    <span class="content"><%= inventory_item.name %></span>
-    <span class="content"><%= inventory_item.hex %></span>
-    <span class="content"><%= inventory_item.location %></span>
-    <span class="content"><%= inventory_item.quantity %></span>
-    <span class="content"><%= wrap(inventory_item.additional_info) %></span>
-    <span class="timestamp">
-        Posted <%= time_ago_in_words(inventory_item.created_at) %> ago.
-    </span>
-    
-    <% if current_user?(inventory_item.user) %>
-        <%= link_to "delete", inventory_item, method: :delete,
-                                              data: { confirm: "You sure?" },
-                                              title: inventory_item.name %>
-    <% end %>
+<li id="<% inventory_item.id %>" class="paint-post clearfix" >
+    <section class="swatch-container">
+        <div class="swatch">
+            <figure class="swatch-color"></figure>
+            <figcaption class="swatch-hex">#<%= inventory_item.hex %></figcaption>
+        </div>
+    </section>
+    <section class="paint-details-container">
+        <ul class="paint-post-info clearfix">
+            <li><%= inventory_item.name %></li>
+            <li><%= inventory_item.location %></li>
+            <li><%= inventory_item.quantity %> Gal</li>
+            <li class="right"><a href="mailto:<%= current_user.email %>?subject=Hi, I'm interested in the paint you posted on Post Your Paint">Contact Owner</a> </li>
+        </ul>
+        <p><%= wrap(inventory_item.additional_info) %></p>
+        <p>Posted <%= time_ago_in_words(inventory_item.created_at) %> ago.
+        <% if current_user?(inventory_item.user) %>
+            <%= link_to "delete", inventory_item, method: :delete,
+                                                  data: { confirm: "You sure?" },
+                                                  title: inventory_item.name %>
+        <% end %>
+        </p>
+    </section>
 </li>
