--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <h2>Find and Post paint in your neighborhood</h2>
 <div class="content">
     <section class="swatch-container">
-        <a href="#" class="swatch">
+        <a href="/family/Reds" class="swatch">
             <ul class="swatch-red">
                 <li class="lighter"></li>
                 <li class="normal"></li>
@@ -12,7 +12,7 @@
         </a>
     </section>
     <section class="swatch-container">
-        <a href="#" class="swatch">
+        <a href="/family/Oranges" class="swatch">
             <ul class="swatch-orange">
                 <li class="lighter"></li>
                 <li class="normal"></li>
@@ -22,7 +22,7 @@
             <h1>ORANGE</h1>
         </a>
     </section><section class="swatch-container">
-        <a href="#" class="swatch">
+        <a href="/family/Yellows" class="swatch">
             <ul class="swatch-yellow">
                 <li class="lighter"></li>
                 <li class="normal"></li>
@@ -32,7 +32,7 @@
             <h1>YELLOW</h1>
         </a>
     </section><section class="swatch-container">
-        <a href="#" class="swatch">
+        <a href="/family/Greens" class="swatch">
             <ul class="swatch-green">
                 <li class="lighter"></li>
                 <li class="normal"></li>
@@ -42,7 +42,7 @@
             <h1>GREEN</h1>
         </a>
     </section><section class="swatch-container">
-        <a href="#" class="swatch">
+        <a href="/family/Blues" class="swatch">
             <ul class="swatch-blue">
                 <li class="lighter"></li>
                 <li class="normal"></li>
@@ -52,7 +52,7 @@
             <h1>BLUE</h1>
         </a>
     </section><section class="swatch-container">
-        <a href="#" class="swatch">
+        <a href="/family/Purples" class="swatch">
             <ul class="swatch-purple">
                 <li class="lighter"></li>
                 <li class="normal"></li>
@@ -62,7 +62,7 @@
             <h1>PURPLE</h1>
         </a>
     </section><section class="swatch-container">
-        <a href="#" class="swatch">
+        <a href="/family/Blacks" class="swatch">
             <ul class="swatch-black">
                 <li class="lighter"></li>
                 <li class="normal"></li>
@@ -72,7 +72,7 @@
             <h1>BLACK</h1>
         </a>
     </section><section class="swatch-container">
-        <a href="#" class="swatch">
+        <a href="/family/Greys" class="swatch">
             <ul class="swatch-grey">
                 <li class="lighter"></li>
                 <li class="normal"></li>
@@ -83,7 +83,7 @@
         </a>
     </section>
     <section class="swatch-container">
-        <a href="#" class="swatch">
+        <a href="/family/Whites" class="swatch">
             <ul class="swatch-white">
                 <li class="lighter"></li>
                 <li class="normal"></li>
@@ -94,7 +94,7 @@
         </a>
     </section>
     <section class="swatch-container">
-        <a href="#" class="swatch">
+        <a href="/family/Creams" class="swatch">
             <ul class="swatch-cream">
                 <li class="lighter"></li>
                 <li class="normal"></li>
@@ -105,7 +105,7 @@
         </a>
     </section>
     <section class="swatch-container">
-        <a href="#" class="swatch">
+        <a href="/family/Browns" class="swatch">
             <ul class="swatch-brown">
                 <li class="lighter"></li>
                 <li class="normal"></li>
