--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -1,4 +1,4 @@
 <p>
-    Email Address: <%= current_user.email %> <span><%= link_to "edit", edit_user_path(current_user) %></span>
+    Email Address: <%= current_user.email %> <span><%= link_to "change", edit_user_path(current_user) %></span>
 </p>
 
