--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -99,30 +99,37 @@ $brown: #7b4312;
         &:before, &:after {
         border-radius: 10px;
         position: absolute;  
-        width: 70%;  
-        height: 110px;  
+        width: 90%;  
+        height: 120px;  
         content: ' ';  
-        left: 4%;  
-        bottom: 5px;  
+        left: 5%;  
+        bottom: 0px;  
         background: transparent;  
+/*
         -webkit-transform: skew(-20deg) rotate(-8deg);  
         -moz-transform: skewX(-3deg) skewY(-12deg);  
         -ms-transform: skew(-5deg) rotate(-5deg);  
         -o-transform: skew(-5deg) rotate(-5deg);  
         transform: skew(-20deg) rotate(-8deg);  
-        -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);  
-        -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);  
-        box-shadow: 0 6px 9px rgba(0, 0, 0, 0.2);  
+*/
+        -webkit-transform: matrix(0.829,-0.170,-0.167,0.946,0,0);
+        -moz-transform: matrix(0.829,-0.170,-0.167,0.946,0px,0px);
+        -ms-transform: matrix(0.829,-0.170,-0.167,0.946,0,0);
+        -o-transform: matrix(0.829,-0.170,-0.167,0.946,0,0);
+        transform: matrix(0.829,-0.170,-0.167,0.946,0,0);
+        -webkit-box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);  
+        -moz-box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);  
+        box-shadow: 0 0 9px rgba(0, 0, 0, 0.2);  
         z-index: -1;  
     }
     &:after {
         left: auto;
-        right: 7%;
-        -webkit-transform: skew(20deg) rotate(8deg);  
-        -moz-transform: skewX(5deg) skewY(13deg);  
-        -ms-transform: skew(-5deg) rotate(-5deg);  
-        -o-transform: skew(-5deg) rotate(-5deg);  
-        transform: skew(20deg) rotate(8deg);  
+        right: 4%;
+        -webkit-transform: matrix(0.829,0.170,0.167,0.946,0,0);
+        -moz-transform: matrix(0.829,0.170,0.167,0.946,0px,0px);
+        -ms-transform: matrix(0.829,0.170,0.167,0.946,0,0);
+        -o-transform: matrix(0.829,0.170,0.167,0.946,0,0);
+        transform: matrix(0.829,0.170,0.167,0.946,0,0);
     }
 
 }
@@ -154,10 +161,11 @@ $brown: #7b4312;
     position: relative;
     width: 80px;
     &:hover {
+        box-shadow: 0px 2px 2px rbga(0,0,0,.4);
         &:before, &:after {
-            -webkit-box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);  
-            -moz-box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);  
-            box-shadow: 0 6px 13px rgba(0, 0, 0, 0.4);              
+            -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);  
+            -moz-box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);  
+            box-shadow: 0 0 13px rgba(0, 0, 0, 0.4);              
         }
     }
     
