--- a/app/views/paints/by_family.html.erb
+++ b/app/views/paints/by_family.html.erb
@@ -1,3 +1,34 @@
+    <form class="well form-inline">
+    <select class="span2">
+        <option>Blacks</option>
+        <option>Blues</option>
+        <option>Browns</option>
+        <option>Creams</option>
+        <option>Greens</option>
+        <option>Greys</option>
+        <option>Oranges</option>
+        <option>Purples</option>
+        <option>Reds</option>
+        <option>Whites</option>
+        <option>Yellows</option>
+    </select>
+    <input class="span2">
+    <select class="span2">
+        <option>< .25</option>
+        <option>.25</option>
+        <option>.5</option>
+        <option>.75</option>
+        <option>1</option>
+        <option>1.25</option>
+        <option>1.5</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+    </select>
+    <button type="submit" class="btn">Filter</button>
+    </form>
+
 <% @paints.each do |paint| %>
 
 <li id="<% paint.id %>" class="paint-post clearfix" >
