--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<h2>Find free paint in your neighborhood</h2>
+<h2>Find & <%= link_to "Post", post_paint_path %> free paint in your neighborhood</h2>
 <div class="content">
     <section class="swatch-container">
         <a href="/family/Reds" class="swatch">
