--- a/app/views/shared/_inventory_item.html.erb
+++ b/app/views/shared/_inventory_item.html.erb
@@ -17,6 +17,8 @@
             <%= link_to "delete", inventory_item, method: :delete,
                                                   data: { confirm: "You sure?" },
                                                   title: inventory_item.name %>
+            <%= link_to "edit", edit_paint_path(inventory_item) %>
+        
         <% end %>
         </p>
     </section>
